--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,7 +29,7 @@
   <mat-list fxLayout="column wrap" fxLayoutGap="3px"  style="text-align:center">
 
     <!-- HEADERS -->
-    <mat-list-item fxLayout="row" fxLayoutGap="10px"> 
+    <mat-list-item fxLayout="row" fxLayoutGap="10px" style="font-weight: bold"> 
       <div class="border-right" fxFlex="1 1 100px">OFFER</div>
       <div class="border-right" fxFlex="1 1 100px">AFFILIATE</div>
       <div class="border-right" fxFlex="1 1 150px">SUB ID 1</div>
@@ -38,44 +38,68 @@
       <div class="border-right" fxFlex="1 1 150px">SUB ID 4</div>
       <div class="border-right" fxFlex="1 1 150px">SUB ID 5</div>
       <div class="border-right" fxFlex="1 1 150px">SOURCE</div>
-      <div class="border-right" fxFlex="1 1 100px">STRICT</div>
-      <div fxFlex="1 1 100px"><button mat-raised-button (click)="toggleFilters()">{{showFilters ? 'Hide' : 'Show'}} Filters</button></div>
+      <div class="border-right" fxFlex="1 1 100px">
+        <span style="position:relative;bottom:3px;">STRICT </span>
+        <mat-icon matTooltip="Whether all parameters needs to match or only one of them is enough.">error_outline</mat-icon>
+      </div>
+      <div fxFlex="1 1 100px"><button mat-raised-button color="accent" (click)="toggleFilters()">{{showFilters ? 'Hide' : 'Show'}} Filters</button></div>
     </mat-list-item>
+
+    <div style="height:20px;"></div>
 
     <!-- Input Filters -->
-    <mat-list-item [style.visibility]="showFilters ? 'visible' : 'hidden'" fxLayout="row" fxLayoutGap="10px"> 
+      <mat-list-item [style.visibility]="showFilters ? 'visible' : 'hidden'" fxLayout="row" fxLayoutGap="10px"> 
+  
+        <mat-form-field appearance="standard" fxFlex="1 1 100px">
+          <mat-label>Offer ID</mat-label>
+          <input #offer type="text" matInput [(ngModel)]="filters.offerId" name="offer">
+        </mat-form-field>
 
-      <mat-form-field appearance="outline" fxFlex="1 1 100px">
-        <input #offer type="text" matInput [(ngModel)]="filters.offerId" name="offer">
-      </mat-form-field>
-      <mat-form-field appearance="outline" fxFlex="1 1 100px">
-        <input #affiliate type="text" matInput [(ngModel)]="filters.affiliateId" name="affiliate">
-      </mat-form-field>
-      <mat-form-field appearance="outline" fxFlex="1 1 150px">
-        <input #sub1 type="text" matInput [(ngModel)]="filters.sub1" name="sub_1" >
-      </mat-form-field>
-      <mat-form-field appearance="outline" fxFlex="1 1 150px">
-        <input #sub2 type="text" matInput [(ngModel)]="filters.sub2" name="sub_2" >
-      </mat-form-field>
-      <mat-form-field appearance="outline" fxFlex="1 1 150px">
-        <input #sub3 type="text" matInput [(ngModel)]="filters.sub3" name="sub_3" >
-      </mat-form-field>
-      <mat-form-field appearance="outline" fxFlex="1 1 150px">
-        <input #sub4 type="text" matInput [(ngModel)]="filters.sub4" name="sub_4" >
-      </mat-form-field>
-      <mat-form-field appearance="outline" fxFlex="1 1 150px">
-        <input #sub5 type="text" matInput [(ngModel)]="filters.sub5" name="sub_5" >
-      </mat-form-field>
-      <mat-form-field appearance="outline" fxFlex="1 1 150px">
-        <input #source type="text" matInput [(ngModel)]="filters.source" name="source">
-      </mat-form-field>
-      <mat-form-field appearance="outline" fxFlex="1 1 100px">
-        <input #strict type="text" matInput [(ngModel)]="filters.strict" name="strict">
-      </mat-form-field>
-      <div class="border-right" fxFlex="1 1 100px"></div>
+        <mat-form-field appearance="standard" fxFlex="1 1 100px">
+          <mat-label>Affiliate ID</mat-label>
+          <input #affiliate type="text" matInput [(ngModel)]="filters.affiliateId" name="affiliate">
+        </mat-form-field>
 
-    </mat-list-item>
-    <mat-divider></mat-divider>
+        <mat-form-field appearance="standard" fxFlex="1 1 150px">
+          <mat-label>Sub ID 1</mat-label>
+          <input #sub1 type="text" matInput [(ngModel)]="filters.sub1" name="sub_1" >
+        </mat-form-field>
+        
+        <mat-form-field appearance="standard" fxFlex="1 1 150px">
+          <mat-label>Sub ID 2</mat-label>
+          <input #sub2 type="text" matInput [(ngModel)]="filters.sub2" name="sub_2" >
+        </mat-form-field>
+
+        <mat-form-field appearance="standard" fxFlex="1 1 150px">
+          <mat-label>Sub ID 3</mat-label>
+          <input #sub3 type="text" matInput [(ngModel)]="filters.sub3" name="sub_3" >
+        </mat-form-field>
+
+        <mat-form-field appearance="standard" fxFlex="1 1 150px">
+          <mat-label>Sub ID 4</mat-label>
+          <input #sub4 type="text" matInput [(ngModel)]="filters.sub4" name="sub_4" >
+        </mat-form-field>
+
+        <mat-form-field appearance="standard" fxFlex="1 1 150px">
+          <mat-label>Sub ID 5</mat-label>
+          <input #sub5 type="text" matInput [(ngModel)]="filters.sub5" name="sub_5" >
+        </mat-form-field>
+
+        <mat-form-field appearance="standard" fxFlex="1 1 150px">
+          <mat-label>Source</mat-label>
+          <input #source type="text" matInput [(ngModel)]="filters.source" name="source">
+        </mat-form-field>
+
+        <mat-form-field appearance="standard" fxFlex="1 1 100px">
+          <mat-label>Strict</mat-label>
+          <input #strict type="text" matInput [(ngModel)]="filters.strict" name="strict">
+        </mat-form-field>
+
+        <div class="border-right" fxFlex="1 1 100px"></div>
+  
+      </mat-list-item>
+      <mat-divider></mat-divider>
+
 
     <!-- DATA ROWS -->
 
@@ -93,14 +117,14 @@
                rule.aff_info5.includes(sub5.value) &&
                rule.source.includes(source.value) &&
                rule.strict.includes(strict.value)">
-          <div class="border-right" fxFlex="1 1 100px">{{rule.offer_id}}</div>
-          <div class="border-right" fxFlex="1 1 100px">{{rule.affiliate_id}}</div>
-          <div class="border-right" fxFlex="1 1 150px">{{rule.aff_info1}}</div>
-          <div class="border-right" fxFlex="1 1 150px">{{rule.aff_info2}}</div>
-          <div class="border-right" fxFlex="1 1 150px">{{rule.aff_info3}}</div>
-          <div class="border-right" fxFlex="1 1 150px">{{rule.aff_info4}}</div>
-          <div class="border-right" fxFlex="1 1 150px">{{rule.aff_info5}}</div>
-          <div class="border-right" fxFlex="1 1 150px">{{rule.source}}</div>
+          <div class="border-right" fxFlex="1 1 100px" matTooltip="rule.offer_id">{{rule.offer_id}}</div>
+          <div class="border-right" fxFlex="1 1 100px" matTooltip="rule.affiliate_id">{{rule.affiliate_id}}</div>
+          <div class="border-right" fxFlex="1 1 150px" matTooltip="rule.aff_info1">{{rule.aff_info1 | limitCharacters: 10}}</div>
+          <div class="border-right" fxFlex="1 1 150px" matTooltip="rule.aff_info2">{{rule.aff_info2 | limitCharacters: 10}}</div>
+          <div class="border-right" fxFlex="1 1 150px" matTooltip="rule.aff_info3">{{rule.aff_info3 | limitCharacters: 10}}</div>
+          <div class="border-right" fxFlex="1 1 150px" matTooltip="rule.aff_info4">{{rule.aff_info4 | limitCharacters: 10}}</div>
+          <div class="border-right" fxFlex="1 1 150px" matTooltip="rule.aff_info5">{{rule.aff_info5 | limitCharacters: 10}}</div>
+          <div class="border-right" fxFlex="1 1 150px" matTooltip="rule.source">{{rule.source | limitCharacters: 10}}</div>
           <div class="border-right" fxFlex="1 1 100px">{{rule.strict === '1' ? 'ON' : 'OFF'}}</div>
             
           <div fxFlex="100px">
@@ -124,6 +148,7 @@
     [pageSize]="pageSize"
     [pageIndex]="pageIndex"
     [pageSizeOptions]="pageSizeOptions"
+    showFirstLastButtons="true"
     (page)="pageEvent = handlePaginationChange($event)">
   </mat-paginator>
 
