--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
+<div>
+  <app-login></app-login>
+</div>
+
 <div *ngIf="primaryFilter.open" fxLayout="row" style="width:100vw; height:100vh;" fxLayoutAlign="center center">
-  <app-primary-filter [totalCount]="totalCount"></app-primary-filter>
+  <app-primary-filter [totalCount]="totalCount" (filtersEmt)="onFiltersReceived($event)"></app-primary-filter>
 </div>
 
 
@@ -8,6 +12,7 @@
 
     <!-- HEADERS -->
     <mat-list-item fxLayout="row" fxLayoutGap="10px" style="font-weight: bold"> 
+      <div class="border-right" fxFlex="1 1 100px">RULE ID</div>
       <div class="border-right" fxFlex="1 1 100px">OFFER</div>
       <div class="border-right" fxFlex="1 1 100px">AFFILIATE</div>
       <div class="border-right" fxFlex="1 1 150px">SUB ID 1</div>
@@ -28,6 +33,11 @@
     <!-- Input Filters -->
       <div [style.visibility]="showFilters ? 'visible' : 'hidden'" fxLayout="row" fxLayoutGap="10px"> 
   
+        <mat-form-field appearance="standard" fxFlex="1 1 100px">
+          <mat-label>ID</mat-label>
+          <input #offer type="text" matInput [(ngModel)]="filters.id" name="id">
+        </mat-form-field>
+
         <mat-form-field appearance="standard" fxFlex="1 1 100px">
           <mat-label>Offer ID</mat-label>
           <input #offer type="text" matInput [(ngModel)]="filters.offerId" name="offer">
@@ -95,14 +105,15 @@
                rule.aff_info5.includes(sub5.value) &&
                rule.source.includes(source.value) &&
                rule.strict.includes(strict.value)">
-          <div class="border-right" fxFlex="1 1 100px" matTooltip="rule.offer_id">{{rule.offer_id}}</div>
-          <div class="border-right" fxFlex="1 1 100px" matTooltip="rule.affiliate_id">{{rule.affiliate_id}}</div>
-          <div class="border-right" fxFlex="1 1 150px" matTooltip="rule.aff_info1">{{rule.aff_info1 | limitCharacters: 10}}</div>
-          <div class="border-right" fxFlex="1 1 150px" matTooltip="rule.aff_info2">{{rule.aff_info2 | limitCharacters: 10}}</div>
-          <div class="border-right" fxFlex="1 1 150px" matTooltip="rule.aff_info3">{{rule.aff_info3 | limitCharacters: 10}}</div>
-          <div class="border-right" fxFlex="1 1 150px" matTooltip="rule.aff_info4">{{rule.aff_info4 | limitCharacters: 10}}</div>
-          <div class="border-right" fxFlex="1 1 150px" matTooltip="rule.aff_info5">{{rule.aff_info5 | limitCharacters: 10}}</div>
-          <div class="border-right" fxFlex="1 1 150px" matTooltip="rule.source">{{rule.source | limitCharacters: 10}}</div>
+          <div class="border-right" fxFlex="1 1 100px" matTooltip={{rule.offer_id}}>{{rule.id}}</div>
+          <div class="border-right" fxFlex="1 1 100px" matTooltip={{rule.offer_id}}>{{rule.offer_id}}</div>
+          <div class="border-right" fxFlex="1 1 100px" matTooltip={{rule.affiliate_id}}>{{rule.affiliate_id}}</div>
+          <div class="border-right" fxFlex="1 1 150px" matTooltip={{rule.aff_info1}}>{{rule.aff_info1 | limitCharacters: 10}}</div>
+          <div class="border-right" fxFlex="1 1 150px" matTooltip={{rule.aff_info2}}>{{rule.aff_info2 | limitCharacters: 10}}</div>
+          <div class="border-right" fxFlex="1 1 150px" matTooltip={{rule.aff_info3}}>{{rule.aff_info3 | limitCharacters: 10}}</div>
+          <div class="border-right" fxFlex="1 1 150px" matTooltip={{rule.aff_info4}}>{{rule.aff_info4 | limitCharacters: 10}}</div>
+          <div class="border-right" fxFlex="1 1 150px" matTooltip={{rule.aff_info5}}>{{rule.aff_info5 | limitCharacters: 10}}</div>
+          <div class="border-right" fxFlex="1 1 150px" matTooltip={{rule.source}}>{{rule.source | limitCharacters: 10}}</div>
           <div class="border-right" fxFlex="1 1 100px">{{rule.strict === '1' ? 'ON' : 'OFF'}}</div>
             
           <div fxFlex="100px">
