--- a/src/app/primary-filter/primary-filter.component.html
+++ b/src/app/primary-filter/primary-filter.component.html
@@ -1,8 +1,8 @@
 <mat-card style="min-width:500px; height:600px; overflow-y: auto; text-align:center;">
 
-  <mat-card-title>We found {{totalCount}} rules.</mat-card-title>
-  <mat-card-subtitle>Lets try filtering out some of them.<br>
-  Select at least one of the following:</mat-card-subtitle>
+  <mat-card-title>{{title}}</mat-card-title>
+  <mat-card-subtitle>{{subtitle}}</mat-card-subtitle>
+  <p>{{message}}</p>
 
   <mat-card-content fxLayout="column" fxLayoutAlign="center center">
 
