--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,27 @@
-<div>
-  <app-login></app-login>
-</div>
+<!-- Login Component, where network ID and token are entered, verified and updated in HoApiService -->
+<app-login 
+  *ngIf="!isValidated" 
+  (validated)="onValidation($event)" 
+  fxLayout="row" style="width:100vw; height:100vh;" fxLayoutAlign="center center">
+</app-login>
 
-<div *ngIf="primaryFilter.open" fxLayout="row" style="width:100vw; height:100vh;" fxLayoutAlign="center center">
-  <app-primary-filter [totalCount]="totalCount" (filtersEmt)="onFiltersReceived($event)"></app-primary-filter>
-</div>
+<!-- Filters Component. Will open if there are more than X number of disabled link rules in a network -->
+<app-primary-filter 
+  *ngIf="primaryFilter.open" 
+  [totalCount]="totalCount" 
+  (filtersEmt)="onFiltersReceived($event)"
+   fxLayout="row" style="width:100vw; height:100vh;" fxLayoutAlign="center center">
+</app-primary-filter>
 
+
+<!-- Actual disabled links data to be shown -->
 
 <div fxLayout="column" fxLayoutAlign="center center" *ngIf="disabledLinks.length > 0">
-  <mat-list fxLayout="column wrap" fxLayoutGap="3px"  style="text-align:center">
+
+  <!-- Internal Filters -->
+  <app-internal-filters [filters]="filters" (filterEmt)="onInternalFilter($event)" style="position:absolute; top:0px; display:block; z-index:10;"></app-internal-filters>
+
+  <mat-list fxLayout="column wrap" fxLayoutGap="3px"  style="text-align:center; position:relative; top:50px;" dense>
 
     <!-- HEADERS -->
     <mat-list-item fxLayout="row" fxLayoutGap="10px" style="font-weight: bold"> 
@@ -25,68 +38,10 @@
         <span style="position:relative;bottom:3px;">STRICT </span>
         <mat-icon matTooltip="Whether all parameters needs to match or only one of them is enough.">error_outline</mat-icon>
       </div>
-      <div fxFlex="1 1 100px"><button mat-raised-button color="accent" (click)="toggleFilters()">{{showFilters ? 'Hide' : 'Show'}} Filters</button></div>
     </mat-list-item>
 
     <div style="height:20px;"></div>
 
-    <!-- Input Filters -->
-      <div [style.visibility]="showFilters ? 'visible' : 'hidden'" fxLayout="row" fxLayoutGap="10px"> 
-  
-        <mat-form-field appearance="standard" fxFlex="1 1 100px">
-          <mat-label>ID</mat-label>
-          <input #offer type="text" matInput [(ngModel)]="filters.id" name="id">
-        </mat-form-field>
-
-        <mat-form-field appearance="standard" fxFlex="1 1 100px">
-          <mat-label>Offer ID</mat-label>
-          <input #offer type="text" matInput [(ngModel)]="filters.offerId" name="offer">
-        </mat-form-field>
-
-        <mat-form-field appearance="standard" fxFlex="1 1 100px">
-          <mat-label>Affiliate ID</mat-label>
-          <input #affiliate type="text" matInput [(ngModel)]="filters.affiliateId" name="affiliate">
-        </mat-form-field>
-
-        <mat-form-field appearance="standard" fxFlex="1 1 150px">
-          <mat-label>Sub ID 1</mat-label>
-          <input #sub1 type="text" matInput [(ngModel)]="filters.sub1" name="sub1" >
-        </mat-form-field>
-        
-        <mat-form-field appearance="standard" fxFlex="1 1 150px">
-          <mat-label>Sub ID 2</mat-label>
-          <input #sub2 type="text" matInput [(ngModel)]="filters.sub2" name="sub2" >
-        </mat-form-field>
-
-        <mat-form-field appearance="standard" fxFlex="1 1 150px">
-          <mat-label>Sub ID 3</mat-label>
-          <input #sub3 type="text" matInput [(ngModel)]="filters.sub3" name="sub3" >
-        </mat-form-field>
-
-        <mat-form-field appearance="standard" fxFlex="1 1 150px">
-          <mat-label>Sub ID 4</mat-label>
-          <input #sub4 type="text" matInput [(ngModel)]="filters.sub4" name="sub4" >
-        </mat-form-field>
-
-        <mat-form-field appearance="standard" fxFlex="1 1 150px">
-          <mat-label>Sub ID 5</mat-label>
-          <input #sub5 type="text" matInput [(ngModel)]="filters.sub5" name="sub5" >
-        </mat-form-field>
-
-        <mat-form-field appearance="standard" fxFlex="1 1 150px">
-          <mat-label>Source</mat-label>
-          <input #source type="text" matInput [(ngModel)]="filters.source" name="source">
-        </mat-form-field>
-
-        <mat-form-field appearance="standard" fxFlex="1 1 100px">
-          <mat-label>Strict</mat-label>
-          <input #strict type="text" matInput [(ngModel)]="filters.strict" name="strict">
-        </mat-form-field>
-
-        <div class="border-right" fxFlex="1 1 100px"></div>
-  
-      </div>
-      <mat-divider></mat-divider>
 
 
     <!-- DATA ROWS -->
@@ -94,27 +49,17 @@
     <!-- Loop through all disabled Links -->
     <ng-container *ngFor="let rule of disabledLinks">
       <!-- Show list item only if they match the filters queries -->
-      <mat-list-item
-        fxLayout="row" fxLayoutGap="10px"
-        *ngIf="rule.offer_id.includes(offer.value) && 
-               rule.affiliate_id.includes(affiliate.value) &&
-               rule.aff_info1.includes(sub1.value) &&
-               rule.aff_info2.includes(sub2.value) &&
-               rule.aff_info3.includes(sub3.value) &&
-               rule.aff_info4.includes(sub4.value) &&
-               rule.aff_info5.includes(sub5.value) &&
-               rule.source.includes(source.value) &&
-               rule.strict.includes(strict.value)">
-          <div class="border-right" fxFlex="1 1 100px" matTooltip={{rule.offer_id}}>{{rule.id}}</div>
-          <div class="border-right" fxFlex="1 1 100px" matTooltip={{rule.offer_id}}>{{rule.offer_id}}</div>
-          <div class="border-right" fxFlex="1 1 100px" matTooltip={{rule.affiliate_id}}>{{rule.affiliate_id}}</div>
-          <div class="border-right" fxFlex="1 1 150px" matTooltip={{rule.aff_info1}}>{{rule.aff_info1 | limitCharacters: 10}}</div>
-          <div class="border-right" fxFlex="1 1 150px" matTooltip={{rule.aff_info2}}>{{rule.aff_info2 | limitCharacters: 10}}</div>
-          <div class="border-right" fxFlex="1 1 150px" matTooltip={{rule.aff_info3}}>{{rule.aff_info3 | limitCharacters: 10}}</div>
-          <div class="border-right" fxFlex="1 1 150px" matTooltip={{rule.aff_info4}}>{{rule.aff_info4 | limitCharacters: 10}}</div>
-          <div class="border-right" fxFlex="1 1 150px" matTooltip={{rule.aff_info5}}>{{rule.aff_info5 | limitCharacters: 10}}</div>
-          <div class="border-right" fxFlex="1 1 150px" matTooltip={{rule.source}}>{{rule.source | limitCharacters: 10}}</div>
-          <div class="border-right" fxFlex="1 1 100px">{{rule.strict === '1' ? 'ON' : 'OFF'}}</div>
+      <mat-list-item fxLayout="row" fxLayoutGap="10px">
+          <div class="border-right" fxFlex="1 1 100px">{{rule.id}}</div>
+          <div class="border-right" fxFlex="1 1 100px">{{rule.offer_id}}</div>
+          <div class="border-right" fxFlex="1 1 100px">{{rule.affiliate_id}}</div>
+          <div class="border-right" fxFlex="1 1 150px">{{rule.aff_info1 | limitCharacters: 10}}</div>
+          <div class="border-right" fxFlex="1 1 150px">{{rule.aff_info2 | limitCharacters: 10}}</div>
+          <div class="border-right" fxFlex="1 1 150px">{{rule.aff_info3 | limitCharacters: 10}}</div>
+          <div class="border-right" fxFlex="1 1 150px">{{rule.aff_info4 | limitCharacters: 10}}</div>
+          <div class="border-right" fxFlex="1 1 150px">{{rule.aff_info5 | limitCharacters: 10}}</div>
+          <div class="border-right" fxFlex="1 1 150px">{{rule.source | limitCharacters: 10}}</div>
+          <div class="border-right" fxFlex="1 1 100px">{{rule.strict === '1' ? 'STRICT' : 'NOT STRICT'}}</div>
             
           <div fxFlex="100px">
             <button 
