--- a/src/app/primary-filter/primary-filter.component.html
+++ b/src/app/primary-filter/primary-filter.component.html
@@ -46,8 +46,8 @@
   </mat-card-content>
 
   <div fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="center center" style="height:17%">
-    <button mat-raised-button color="accent" (click)="toggleAdditionalFilters()" style="width:200px">{{showAdditionalFilters ? "SHOW LESS" : "MORE FILTERS"}}</button>
-    <button mat-raised-button color="primary" (click)="rulesCount()" style="width:200px">NEXT</button>
+    <button class="rounded" mat-raised-button color="accent" (click)="toggleAdditionalFilters()" style="width:200px">{{showAdditionalFilters ? "SHOW LESS" : "MORE FILTERS"}}</button>
+    <button class="rounded" mat-raised-button color="primary" (click)="rulesCount()" style="width:200px">NEXT</button>
   </div>
 
 </mat-card>
