--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,63 +21,78 @@
   <!-- Internal Filters -->
   <app-internal-filters [filters]="filters" (filterEmt)="onInternalFilter($event)" style="position:absolute; top:0px; display:block; z-index:10;"></app-internal-filters>
 
-  <mat-list fxLayout="column wrap" fxLayoutGap="3px"  style="text-align:center; position:relative; top:50px;" dense>
-
-    <!-- HEADERS -->
-    <mat-list-item fxLayout="row" fxLayoutGap="10px" style="font-weight: bold"> 
-      <div class="border-right" fxFlex="1 1 100px">RULE ID</div>
-      <div class="border-right" fxFlex="1 1 100px">OFFER</div>
-      <div class="border-right" fxFlex="1 1 100px">AFFILIATE</div>
-      <div class="border-right" fxFlex="1 1 150px">SUB ID 1</div>
-      <div class="border-right" fxFlex="1 1 150px">SUB ID 2</div>
-      <div class="border-right" fxFlex="1 1 150px">SUB ID 3</div>
-      <div class="border-right" fxFlex="1 1 150px">SUB ID 4</div>
-      <div class="border-right" fxFlex="1 1 150px">SUB ID 5</div>
-      <div class="border-right" fxFlex="1 1 150px">SOURCE</div>
-      <div class="border-right" fxFlex="1 1 100px">
-        <span style="position:relative;bottom:3px;">STRICT </span>
-        <mat-icon matTooltip="Whether all parameters needs to match or only one of them is enough.">error_outline</mat-icon>
-      </div>
-    </mat-list-item>
-
-    <div style="height:20px;"></div>
-
-
-
-    <!-- DATA ROWS -->
-
-    <!-- Loop through all disabled Links -->
-    <ng-container *ngFor="let rule of disabledLinks">
-      <!-- Show list item only if they match the filters queries -->
-      <mat-list-item fxLayout="row" fxLayoutGap="10px">
-          <div class="border-right" fxFlex="1 1 100px">{{rule.id}}</div>
-          <div class="border-right" fxFlex="1 1 100px">{{rule.offer_id}}</div>
-          <div class="border-right" fxFlex="1 1 100px">{{rule.affiliate_id}}</div>
-          <div class="border-right" fxFlex="1 1 150px">{{rule.aff_info1 | limitCharacters: 10}}</div>
-          <div class="border-right" fxFlex="1 1 150px">{{rule.aff_info2 | limitCharacters: 10}}</div>
-          <div class="border-right" fxFlex="1 1 150px">{{rule.aff_info3 | limitCharacters: 10}}</div>
-          <div class="border-right" fxFlex="1 1 150px">{{rule.aff_info4 | limitCharacters: 10}}</div>
-          <div class="border-right" fxFlex="1 1 150px">{{rule.aff_info5 | limitCharacters: 10}}</div>
-          <div class="border-right" fxFlex="1 1 150px">{{rule.source | limitCharacters: 10}}</div>
-          <div class="border-right" fxFlex="1 1 100px">{{rule.strict === '1' ? 'STRICT' : 'NOT STRICT'}}</div>
-            
-          <div fxFlex="100px">
-            <button 
-              mat-raised-button 
-              color="warn" 
-              (click)="deleteDisabledLink(rule.id)"
-              style="float:right"
-            >
-              DELETE
-            </button>
-          </div>
-    
-          <mat-divider></mat-divider>
-        </mat-list-item>
+  <table mat-table [dataSource]="disabledLinks" style="width:90%; position:relative; top:50px;">
+  
+      <ng-container matColumnDef="rule_id">
+        <th mat-header-cell *matHeaderCellDef> RULE ID </th>
+        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
       </ng-container>
-  </mat-list>
+
+      <ng-container matColumnDef="offer_id">
+        <th mat-header-cell *matHeaderCellDef> OFFER ID </th>
+        <td mat-cell *matCellDef="let element"> {{element.offer_id}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="affiliate_id">
+        <th mat-header-cell *matHeaderCellDef> AFFILIATE ID </th>
+        <td mat-cell *matCellDef="let element"> {{element.affiliate_id}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="affiliate_sub_id1">
+        <th mat-header-cell *matHeaderCellDef> AFFILIATE SUB ID 1 </th>
+        <td mat-cell *matCellDef="let element"> {{element.sub_info1}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="affiliate_sub_id2">
+        <th mat-header-cell *matHeaderCellDef> AFFILIATE SUB ID 2 </th>
+        <td mat-cell *matCellDef="let element"> {{element.sub_info2}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="affiliate_sub_id3">
+        <th mat-header-cell *matHeaderCellDef> AFFILIATE SUB ID 3 </th>
+        <td mat-cell *matCellDef="let element"> {{element.sub_info3}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="affiliate_sub_id4">
+        <th mat-header-cell *matHeaderCellDef> AFFILIATE SUB ID 4 </th>
+        <td mat-cell *matCellDef="let element"> {{element.sub_info4}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="affiliate_sub_id5">
+        <th mat-header-cell *matHeaderCellDef> AFFILIATE SUB ID 5 </th>
+        <td mat-cell *matCellDef="let element"> {{element.sub_info5}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="source">
+        <th mat-header-cell *matHeaderCellDef> SOURCE </th>
+        <td mat-cell *matCellDef="let element"> {{element.source | limitCharacters: 10}} </td>
+      </ng-container>
+      <ng-container matColumnDef="strict">
+        <th mat-header-cell *matHeaderCellDef> STRICT </th>
+        <td mat-cell *matCellDef="let element"> {{element.strict ? 'ENABLED' : 'DISABLED'}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef> </th>
+        <td mat-cell *matCellDef="let element">
+            <button 
+            mat-raised-button 
+            color="warn" 
+            (click)="deleteDisabledLink(rule.id)"
+            style="float:right"
+          >
+            DELETE
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="headers"></tr>
+      <tr mat-row *matRowDef="let row; columns: headers;"></tr>
+
+  </table>
 
   <mat-paginator 
+    style="position:relative; top:50px;"
     [length]="totalCount"
     [pageSize]="pageSize"
     [pageIndex]="pageIndex"
@@ -87,4 +102,5 @@
   </mat-paginator>
 
 </div>
+
 
