--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,18 @@
-<mat-card>
+<mat-card fxLayout="column" fxLayoutAlign="start center" style="width:450px; height:500px;">
 
-  <!-- <img src="../../environments//photos/hasoffers-logo.png"> -->
-
+    
+  <img mat-card-image src="https://res.cloudinary.com/manor-assignment/image/upload/v1539928897/general/hasoffers-logo.png">
   <mat-card-title>{{title}}</mat-card-title>
-  
+
   <mat-card-content fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px">
+
+    <!-- <mat-form-field appearance="outline">
+      <input #networkId type="text" matInput placeholder="Network ID">
+    </mat-form-field>
+  
+    <mat-form-field appearance="outline">
+      <input #networkToken type="text" matInput placeholder="Netwoork token">
+    </mat-form-field> -->
     <mat-form-field appearance="outline">
       <input #networkId type="text" matInput placeholder="Network ID" value="wmadv">
     </mat-form-field>
@@ -12,11 +20,19 @@
     <mat-form-field appearance="outline">
       <input #networkToken type="text" matInput placeholder="Netwoork token" value="NET80o5jnM9Yn8hSSO5jYfX4eZnzvS">
     </mat-form-field>
+
   </mat-card-content>
 
 
   <mat-card-actions fxLayout="row" fxLayoutAlign="center start">
-    <button mat-raised-button (click)="validateNetorkCreds(networkId.value, networkToken.value)" color="primary">GO!</button>
+    <button 
+      mat-raised-button 
+      (click)="validateNetorkCreds(networkId.value, networkToken.value)" 
+      color="primary"
+      class="rounded"
+    >
+      GO!
+    </button>
   </mat-card-actions>
 
 </mat-card>
