--- a/src/app/primary-filter/primary-filter.component.html
+++ b/src/app/primary-filter/primary-filter.component.html
@@ -1,8 +1,8 @@
-<mat-card style="min-width:500px; height:600px; overflow-y: auto; text-align:center;">
+<mat-card style="max-width:500px; height:600px; overflow-y: auto; text-align:center;">
 
+  <h3>{{brand}}</h3>
   <mat-card-title>{{title}}</mat-card-title>
   <mat-card-subtitle>{{subtitle}}</mat-card-subtitle>
-  <p>{{message}}</p>
 
   <mat-card-content fxLayout="column" fxLayoutAlign="center center">
 
@@ -46,8 +46,8 @@
   </mat-card-content>
 
   <div fxLayout="column" fxLayoutGap="10px" fxLayoutAlign="center center" style="height:17%">
-    <button class="rounded" mat-raised-button color="accent" (click)="toggleAdditionalFilters()" style="width:200px">{{showAdditionalFilters ? "SHOW LESS" : "MORE FILTERS"}}</button>
-    <button class="rounded" mat-raised-button color="primary" (click)="rulesCount()" style="width:200px">NEXT</button>
+    <button class="rounded nofocus" mat-raised-button color="accent" (click)="toggleAdditionalFilters()" style="width:200px">{{showAdditionalFilters ? "SHOW LESS" : "MORE FILTERS"}}</button>
+    <button class="rounded nofocus" mat-raised-button color="primary" (click)="rulesCount()" style="width:200px">NEXT</button>
   </div>
 
 </mat-card>
