--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,12 +16,16 @@
 
 <!-- Actual disabled links data to be shown -->
 
-<div fxLayout="column" fxLayoutAlign="center center" *ngIf="disabledLinks.length > 0">
+<div fxLayout="column" fxLayoutAlign="center center" *ngIf="disabledLinks.length > 0" style="width:100vw;">
 
   <!-- Internal Filters -->
-  <app-internal-filters [filters]="filters" (filterEmt)="onInternalFilter($event)" style="position:absolute; top:0px; display:block; z-index:10;"></app-internal-filters>
+  <app-internal-filters
+    [filters]="filters" 
+    (filterEmt)="onInternalFilter($event)" 
+    style="max-width:500px; position:absolute; top:0px; display:block; z-index:10;">
+  </app-internal-filters>
 
-  <table mat-table [dataSource]="disabledLinks" style="width:90%; position:relative; top:50px;">
+  <table mat-table [dataSource]="disabledLinks" style="margin-top: 50px; z-index: -1; width:97vw;">
   
       <ng-container matColumnDef="rule_id">
         <th mat-header-cell *matHeaderCellDef> RULE ID </th>
@@ -39,33 +43,33 @@
       </ng-container>
 
       <ng-container matColumnDef="affiliate_sub_id1">
-        <th mat-header-cell *matHeaderCellDef> AFFILIATE SUB ID 1 </th>
+        <th mat-header-cell *matHeaderCellDef> AFF SUB ID 1 </th>
         <td mat-cell *matCellDef="let element"> {{element.sub_info1}} </td>
       </ng-container>
 
       <ng-container matColumnDef="affiliate_sub_id2">
-        <th mat-header-cell *matHeaderCellDef> AFFILIATE SUB ID 2 </th>
+        <th mat-header-cell *matHeaderCellDef> AFF SUB ID 2 </th>
         <td mat-cell *matCellDef="let element"> {{element.sub_info2}} </td>
       </ng-container>
 
       <ng-container matColumnDef="affiliate_sub_id3">
-        <th mat-header-cell *matHeaderCellDef> AFFILIATE SUB ID 3 </th>
+        <th mat-header-cell *matHeaderCellDef> AFF SUB ID 3 </th>
         <td mat-cell *matCellDef="let element"> {{element.sub_info3}} </td>
       </ng-container>
 
       <ng-container matColumnDef="affiliate_sub_id4">
-        <th mat-header-cell *matHeaderCellDef> AFFILIATE SUB ID 4 </th>
+        <th mat-header-cell *matHeaderCellDef> AFF SUB ID 4 </th>
         <td mat-cell *matCellDef="let element"> {{element.sub_info4}} </td>
       </ng-container>
 
       <ng-container matColumnDef="affiliate_sub_id5">
-        <th mat-header-cell *matHeaderCellDef> AFFILIATE SUB ID 5 </th>
+        <th mat-header-cell *matHeaderCellDef> AFF SUB ID 5 </th>
         <td mat-cell *matCellDef="let element"> {{element.sub_info5}} </td>
       </ng-container>
 
       <ng-container matColumnDef="source">
         <th mat-header-cell *matHeaderCellDef> SOURCE </th>
-        <td mat-cell *matCellDef="let element"> {{element.source | limitCharacters: 10}} </td>
+        <td mat-cell *matCellDef="let element" style="max-width: 100px; word-wrap: break-word;"> {{element.source}} </td>
       </ng-container>
       <ng-container matColumnDef="strict">
         <th mat-header-cell *matHeaderCellDef> STRICT </th>
@@ -75,14 +79,7 @@
       <ng-container matColumnDef="delete">
         <th mat-header-cell *matHeaderCellDef> </th>
         <td mat-cell *matCellDef="let element">
-            <button 
-            mat-raised-button 
-            color="warn" 
-            (click)="deleteDisabledLink(rule.id)"
-            style="float:right"
-          >
-            DELETE
-          </button>
+          <mat-icon color="warn" (click)="deleteDisabledLink(rule.id)">delete</mat-icon>
         </td>
       </ng-container>
 
