--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,25 +1,26 @@
-<mat-card fxLayout="column" fxLayoutAlign="start center" style="width:450px; height:500px;">
+<mat-card fxLayout="column" fxLayoutAlign="start center" style="max-width:450px; height:500px; background-color: #fafafa;">
 
     
   <img mat-card-image src="https://res.cloudinary.com/manor-assignment/image/upload/v1539928897/general/hasoffers-logo.png">
   <mat-card-title>{{title}}</mat-card-title>
+  <mat-card-subtitle>{{subtitle}}</mat-card-subtitle>
 
   <mat-card-content fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px">
 
-    <!-- <mat-form-field appearance="outline">
+    <mat-form-field appearance="outline">
       <input #networkId type="text" matInput placeholder="Network ID">
     </mat-form-field>
   
     <mat-form-field appearance="outline">
       <input #networkToken type="text" matInput placeholder="Netwoork token">
-    </mat-form-field> -->
-    <mat-form-field appearance="outline">
+    </mat-form-field>
+    <!-- <mat-form-field appearance="outline">
       <input #networkId type="text" matInput placeholder="Network ID" value="wmadv">
     </mat-form-field>
   
     <mat-form-field appearance="outline">
       <input #networkToken type="text" matInput placeholder="Netwoork token" value="NET80o5jnM9Yn8hSSO5jYfX4eZnzvS">
-    </mat-form-field>
+    </mat-form-field> -->
 
   </mat-card-content>
 
@@ -29,7 +30,7 @@
       mat-raised-button 
       (click)="validateNetorkCreds(networkId.value, networkToken.value)" 
       color="primary"
-      class="rounded"
+      class="rounded nofocus"
     >
       GO!
     </button>
