--- a/src/app/primary-filter/primary-filter.component.html
+++ b/src/app/primary-filter/primary-filter.component.html
@@ -1,8 +1,8 @@
-<mat-card style="max-width:500px; height:600px; overflow-y: auto; text-align:center;">
+<div style="max-width:500px; height:600px; overflow-y: auto; text-align:center;">
 
   <h3>{{brand}}</h3>
   <mat-card-title>{{title}}</mat-card-title>
-  <mat-card-subtitle>{{subtitle}}</mat-card-subtitle>
+  <p><mat-card-subtitle>{{subtitle}}</mat-card-subtitle></p>
 
   <mat-card-content fxLayout="column" fxLayoutAlign="center center">
 
@@ -50,4 +50,4 @@
     <button class="rounded nofocus" mat-raised-button color="primary" (click)="rulesCount()" style="width:200px">NEXT</button>
   </div>
 
-</mat-card>
+</div>
