--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
-<mat-card fxLayout="column" fxLayoutAlign="start center" style="max-width:450px; height:500px; background-color: #fafafa;">
+<div fxLayout="column" fxLayoutAlign="start center" style="max-width:450px; height:500px;">
 
     
-  <img mat-card-image src="https://res.cloudinary.com/manor-assignment/image/upload/v1539928897/general/hasoffers-logo.png">
+  <img mat-card-image src="https://res.cloudinary.com/manor-assignment/image/upload/v1539928897/general/hasoffers-logo.png" style="padding: 0px 15px;">
   <mat-card-title>{{title}}</mat-card-title>
   <mat-card-subtitle>{{subtitle}}</mat-card-subtitle>
 
@@ -12,15 +12,8 @@
     </mat-form-field>
   
     <mat-form-field appearance="outline">
-      <input #networkToken type="text" matInput placeholder="Netwoork token">
+      <input #networkToken type="password" matInput placeholder="Netwoork token">
     </mat-form-field>
-    <!-- <mat-form-field appearance="outline">
-      <input #networkId type="text" matInput placeholder="Network ID" value="wmadv">
-    </mat-form-field>
-  
-    <mat-form-field appearance="outline">
-      <input #networkToken type="text" matInput placeholder="Netwoork token" value="NET80o5jnM9Yn8hSSO5jYfX4eZnzvS">
-    </mat-form-field> -->
 
   </mat-card-content>
 
@@ -36,4 +29,4 @@
     </button>
   </mat-card-actions>
 
-</mat-card>
+</div>
